# ltd-invoice

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.celery  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ltd_invoice/: __main__.py  bookkepping.py  celeryapp.py  gmail.py  pdf_parse.py  tasks.py  tracker.py
tests/: test_email_data.py
